samples/_failures_safe/1761161721_c1e912_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e7ec981.c: In function ‘main’:
./samples/SAFE/__tmp_4e7ec981.c:207:5: error: expected expression at end of input
  207 |     if (
      |     ^~
./samples/SAFE/__tmp_4e7ec981.c:207:5: error: expected declaration or statement at end of input
